--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         uses: actions/setup-node@v3
+        name: run lint
         with:
           node-version: ${{ matrix.node-version }}
       - run: nvm i 16.14
