fix actions flow

--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -13,10 +13,9 @@ jobs:
     name: Linters
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         name: run lint
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: nvm i 16.14
-      - run: nvm use 16.14
+          node-version: 16.14
       - run: yarn install
       - run: yarn run lint
