--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.2",
+    "nuxt": "^3.6.1",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "bulma": "^0.9.4",
     "node-sass": "^8.0.0",
+    "pinia": "^2.1.4",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2"
   }
