--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "bulma": "^0.9.4",
+    "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "pinia": "^2.1.4",
     "sass": "^1.62.1",
