--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@nuxtjs/supabase": "^1.1.2",
     "@pinia/nuxt": "^0.4.11",
     "@vuepic/vue-datepicker": "^6.0.0",
@@ -34,6 +33,7 @@
     "node-sass": "^8.0.0",
     "pinia": "^2.1.4",
     "sass": "^1.62.1",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "vue-i18n": "^9.6.4"
   }
 }
